# server/api/v1/system/sys_user.go
@@ -147,7 +147,7 @@ func (u *UserApi) ResetPassword(c *gin.Context) {
 // @Produce	application/json
 // @Param	id	path	int	true	"用户ID"
 // @Success	200	{object}	response.Response{code=int,data=any,msg=string}
-// @Router	/user/enable/:id [put]
+// @Router	/user/enable/{id} [put]
 func (u *UserApi) EnableUser(c *gin.Context) {
 	id := c.Param("id")
 	if id == "" {
@@ -172,7 +172,7 @@ func (u *UserApi) EnableUser(c *gin.Context) {
 // @Produce	application/json
 // @Param	id	path	int	true	"用户ID"
 // @Success	200	{object}	response.Response{code=int,data=any,msg=string}
-// @Router	/user/disable/:id [put]
+// @Router	/user/disable/{id} [put]
 func (u *UserApi) DisableUser(c *gin.Context) {
 	id := c.Param("id")
 	if id == "" {
@@ -200,7 +200,7 @@ func (u *UserApi) DisableUser(c *gin.Context) {
 // @Produce	application/json
 // @Param	id	path	int	true	"用户ID"
 // @Success	200	{object}	response.Response{code=int,data=any,msg=string}
-// @Router	/user/delete/:id [delete]
+// @Router	/user/delete/{id} [delete]
 func (u *UserApi) DeleteUser(c *gin.Context) {
 	id := c.Param("id")
 	if id == "" {
